Refactor CSS for improved alignment and consistency; update HTML structure for better readability

--- a/css/style.css
+++ b/css/style.css
@@ -33,13 +33,14 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .custom_heading-container h2 {
   text-transform: uppercase;
   font-weight: bold;
+  text-align: center;
 }
 
 .custom_heading-container hr {
@@ -54,8 +55,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .custom1_heading-container h2 {
@@ -85,12 +86,11 @@ body {
 
 .header_section {
   background-color: #1e025b;
-  padding: 10px 0;
 }
 
 .header_section .container-fluid {
-  padding-right: 25px;
-  padding-left: 25px;
+  /* padding-right: 25px;
+  padding-left: 25px; */
 }
 
 .header_section .nav_container {
@@ -135,7 +135,7 @@ a:focus {
 .btn:focus {
   outline: none !important;
   -webkit-box-shadow: none;
-          box-shadow: none;
+  box-shadow: none;
 }
 
 .navbar-brand,
@@ -161,8 +161,9 @@ a:focus {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  justify-content: center;
 }
 
 .navbar-brand img {
@@ -198,8 +199,8 @@ a:focus {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   padding-left: 10%;
 }
 
@@ -254,7 +255,7 @@ a:focus {
   background: linear-gradient(135deg, #a454fd, #2b05df);
   z-index: 3;
   -webkit-clip-path: polygon(0 0, 60% 0, 37% 100%, 0% 100%);
-          clip-path: polygon(0 0, 60% 0, 37% 100%, 0% 100%);
+  clip-path: polygon(0 0, 60% 0, 37% 100%, 0% 100%);
 }
 
 .slider_section .carousel-control-prev,
@@ -275,7 +276,7 @@ a:focus {
   background-color: #ffffff;
   top: 50%;
   -webkit-transform: translate(-50%, 0);
-          transform: translate(-50%, 0);
+  transform: translate(-50%, 0);
 }
 
 .slider_section .carousel-control-next {
@@ -283,7 +284,7 @@ a:focus {
   background-color: #2e02fe;
   top: calc(50% - 30px);
   -webkit-transform: translate(0, -50%);
-          transform: translate(0, -50%);
+  transform: translate(0, -50%);
 }
 
 .about_section {
@@ -292,8 +293,8 @@ a:focus {
 
 .about_section .row {
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .about_section a {
@@ -319,7 +320,7 @@ a:focus {
   width: 100%;
 }
 
-.about_section h6 {
+.about_section h3 {
   text-transform: uppercase;
   color: #bdbbbb;
   font-weight: bold;
@@ -346,8 +347,8 @@ a:focus {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 }
 
 .service_section .box {
@@ -368,11 +369,11 @@ a:focus {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   background-color: #ffffff;
 }
 
@@ -410,8 +411,8 @@ a:focus {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 .service_section .read-btn a {
@@ -457,11 +458,11 @@ a:focus {
   position: absolute;
   opacity: 0;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   width: 50px;
   height: 50px;
   border-radius: 100%;
@@ -469,7 +470,7 @@ a:focus {
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   -webkit-transition: opacity 0.2s;
   transition: opacity 0.2s;
 }
@@ -487,7 +488,7 @@ a:focus {
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   width: 0;
   height: 0;
   /* background-color: rgba(147, 143, 233, 0.8); */
@@ -530,8 +531,8 @@ a:focus {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
   padding: 10px 0;
 }
 
@@ -573,8 +574,8 @@ a:focus {
 
 .subscribe_section .row {
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .subscribe_section h2,
@@ -616,7 +617,7 @@ a:focus {
   color: #ffffff;
   background-color: #0000ff;
   -webkit-transform: translate(-104%, 7.5px);
-          transform: translate(-104%, 7.5px);
+  transform: translate(-104%, 7.5px);
   text-align: center;
   text-transform: uppercase;
 }
@@ -649,8 +650,8 @@ a:focus {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  -ms-flex-align: end;
+  align-items: flex-end;
 }
 
 .client_section .client_container .box .client-id .img-box {
@@ -764,8 +765,8 @@ a:focus {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 }
 
 .contact_items .item {
@@ -774,8 +775,8 @@ a:focus {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   text-align: center;
 }
 
@@ -828,8 +829,8 @@ a:focus {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   margin: 0 auto 20px auto;
 }
 
@@ -859,7 +860,7 @@ a:focus {
 .footer_section a {
   color: #292929;
 }
-*{
+* {
   box-sizing: boerdrer-box;
 }
 /* for desktop */
@@ -870,7 +871,7 @@ a:focus {
   bottom: 40px;
   right: 40px;
   background-color: #25d366;
-  color: #FFF;
+  color: #fff;
   border-radius: 50px;
   text-align: center;
   font-size: 30px;
@@ -883,28 +884,27 @@ a:focus {
 }
 
 @media screen and (min-width: 767px) {
- 
-  .title-card{
+  .title-card {
     display: flex;
     justify-content: center;
-    margin-left: '-15px';
+    /* margin-left: "-15px"; */
   }
 }
 /* for mobile */
 @media screen and (max-width: 767px) {
-  .navbar-brand img{     
+  .navbar-brand img {
     width: 80px !important;
   }
   .whatsapp-icon {
-      margin-top: 10px;
+    margin-top: 10px;
   }
 
   .whatsapp_float {
-      width: 40px;
-      height: 40px;
-      bottom: 20px;
-      right: 10px;
-      font-size: 22px;
+    width: 40px;
+    height: 40px;
+    bottom: 20px;
+    right: 10px;
+    font-size: 22px;
   }
 }
 
